--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://KuyaLoy.github.io/NIKE---UI-Practice-Reactjs---Tailwindcss/",
+  "homepage": "https://kuyaloy.github.io/ReactJS-TailwindCss-NikeInspired/",
   "name": "nike",
   "private": true,
   "version": "0.0.0",
